--- a/packages.yml
+++ b/packages.yml
@@ -1,5 +1,5 @@
 packages:
-  - package: fivetran/salesforce
-    version: 0.7.2
+  #- package: fivetran/salesforce
+  #  version: 0.7.2
   - package: fivetran/netsuite
-    version: 0.7.0  
+    version: 0.7.0
